10-GatewayAPI/manifests/06-gateway-b.yaml
# Segundo Gateway, independente do primeiro -- gera seu PRÓPRIO Deployment + Service
# LoadBalancer (nome padrão: gateway-app-b-openshift-default), separado do gateway-app-a.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-app-b
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
    - name: http
      hostname: "app-b.gwapi.example.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
