10-GatewayAPI/manifests/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: lab-gateway-demo
spec:
  parentRefs:
    - name: gateway-app
      namespace: openshift-ingress
  hostnames:
    - "app.gwapi.example.com"
  rules:
    - backendRefs:
        - name: app
          port: 8080
